fixed border 1-2 px shifted neighbor elements

--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,6 @@ Body {
     width: 400px;
   }
   .App {
-    height: 400px;
-    width: 400px;
     align-items: center;
   }
   .Drone {
@@ -78,7 +76,6 @@ Body {
 .Footer {
   position: absolute;
   bottom: 10px;
-  display: flex;
   opacity: 0;
   animation: footerIntro 4s 8s forwards;
 }
@@ -120,7 +117,6 @@ Body {
 }
 
 button {
-  box-sizing: border-box;
   cursor: pointer;
   margin: 5px;
   padding: 6px;
@@ -204,7 +200,7 @@ Solved by adding another border. */
     rgb(150, 128, 145) 0%,
     rgb(190, 171, 195) 100%
   );
-  border: 1px solid black;
+  border: 2px groove black;
   color: #e6d9c4;
   text-shadow: 2px 2px 2px #634667;
   transform: scale(1.1);
